Fix resources; Fix wrong position of jacks

--- a/calf-modguis.lv2/modgui/Pulsator/icon-calf-pulsator.html
+++ b/calf-modguis.lv2/modgui/Pulsator/icon-calf-pulsator.html
@@ -39,7 +39,7 @@
 		</div>
 
     </div>
-    <div class="mod-pedal-input calf-pedal-input">
+    <div class="mod-pedal-input">
         {{#effect.ports.audio.input}}
         <div class="mod-input mod-input-disconnected" title="{{name}}" mod-role="input-audio-port" mod-port-symbol="{{symbol}}">
             <div class="mod-pedal-input-image"></div>
@@ -51,7 +51,7 @@
         </div>
         {{/effect.ports.midi.input}}
     </div>
-    <div class="mod-pedal-output calf-pedal-output">
+    <div class="mod-pedal-output">
         {{#effect.ports.audio.output}}
         <div class="mod-output mod-output-disconnected" title="{{name}}" mod-role="output-audio-port" mod-port-symbol="{{symbol}}">
             <div class="mod-pedal-output-image"></div>
