--- a/calf-modguis.lv2/modgui/Phaser/icon-calf-phaser.html
+++ b/calf-modguis.lv2/modgui/Phaser/icon-calf-phaser.html
@@ -69,7 +69,7 @@
             <div class="logo"></div>
         </div>
     </div>
-    <div class="mod-pedal-input calf-pedal-input">
+    <div class="mod-pedal-input">
         {{#effect.ports.audio.input}}
         <div class="mod-input mod-input-disconnected" title="{{name}}" mod-role="input-audio-port" mod-port-symbol="{{symbol}}">
             <div class="mod-pedal-input-image"></div>
@@ -81,7 +81,7 @@
         </div>
         {{/effect.ports.midi.input}}
     </div>
-    <div class="mod-pedal-output calf-pedal-output">
+    <div class="mod-pedal-output">
         {{#effect.ports.audio.output}}
         <div class="mod-output mod-output-disconnected" title="{{name}}" mod-role="output-audio-port" mod-port-symbol="{{symbol}}">
             <div class="mod-pedal-output-image"></div>
