Fix custom blop modguis

--- a/blop-modguis.lv2/modgui/icon-sawtooth.html
+++ b/blop-modguis.lv2/modgui/icon-sawtooth.html
@@ -1,4 +1,4 @@
-<div class="blop sawtooth mod-pedal-boxy mod-one-knob mod-{{color}}">
+<div class="blop_sawtooth">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-light on" mod-role="bypass-light"></div>
     <div class="mod-control-group">
