Delete old calf templateData; Fix monosynth midi in port

--- a/ttlfiles-fixed/calf.lv2/modgui/Monosynth/icon-calf-monosynth.html
+++ b/ttlfiles-fixed/calf.lv2/modgui/Monosynth/icon-calf-monosynth.html
@@ -399,7 +399,7 @@
         </div>
         {{/effect.ports.audio.input}}
         {{#effect.ports.midi.input}}
-        <div class="mod-input mod-input-disconnected" title="{{name}}" mod-role="input-midi-port" mod-port-symbol="event_in">
+        <div class="mod-input mod-input-disconnected" title="{{name}}" mod-role="input-midi-port" mod-port-symbol="{{symbol}}">
             <div class="mod-pedal-input-image"></div>
         </div>
         {{/effect.ports.midi.input}}
