Change a few monosynth ports

--- a/ttlfiles-fixed/calf.lv2/modgui/Monosynth/icon-calf-monosynth.html
+++ b/ttlfiles-fixed/calf.lv2/modgui/Monosynth/icon-calf-monosynth.html
@@ -174,14 +174,14 @@
                         </div>
                     </div>
                     <div class="knob-group" style="margin-left: 2.5em;">
-                        <span class="title-fild title-knob2-top">Pulse width</span><br />
-                        <div class="knob knob2 knob2-1" mod-role="input-control-port" mod-port-symbol="o2_pw"></div>
-                        <div class="title-fild bottom-knob2" mod-role="input-control-value" mod-port-symbol="o2_pw"></div>
+                        <span class="title-fild title-knob2-top">Cutoff</span><br />
+                        <div class="knob knob2 knob2-1" mod-role="input-control-port" mod-port-symbol="cutoff"></div>
+                        <div class="title-fild bottom-knob2" mod-role="input-control-value" mod-port-symbol="cutoff"></div>
                     </div>
                     <div class="knob-group">
-                        <span class="title-fild title-knob2-top">Transpose</span><br />
-                        <div class="knob knob2 knob2-1" mod-role="input-control-port" mod-port-symbol="o2_xpose"></div>
-                        <div class="title-fild bottom-knob2" mod-role="input-control-value" mod-port-symbol="o2_xpose"></div>
+                        <span class="title-fild title-knob2-top">Resonance</span><br />
+                        <div class="knob knob2 knob2-1" mod-role="input-control-port" mod-port-symbol="res"></div>
+                        <div class="title-fild bottom-knob2" mod-role="input-control-value" mod-port-symbol="res"></div>
                     </div>  
                     <div class="knob-group" style="margin-left: 4em; margin-right: 3em;">
                         <span class="title-fild title-knob4-top">Separation</span><br />
