--- a/ttlfiles-fixed/mod-caps-AutoFilter.lv2/modgui/icon-c-autofilter.html
+++ b/ttlfiles-fixed/mod-caps-AutoFilter.lv2/modgui/icon-c-autofilter.html
@@ -1,4 +1,4 @@
-<div class="mod-pedal mod-pedal-boxy{{{cns}}} mod-three-knobs mod-{{color}} {{color}}">
+<div class="mod-pedal mod-pedal-boxy{{{cns}}} mod-four-knobs mod-boxy75 mod-{{color}} {{color}}">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-plugin-brand"><h1>{{brand}}</h1></div>
     <div class="mod-plugin-name"><h1>{{label}}</h1></div>
@@ -34,6 +34,12 @@
             <span class="mod-knob-title">{{name}}</span>
         </div>
         {{/controls.3}}
+        {{#controls.4}}
+        <div class="mod-knob">
+            <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-knob-title">{{name}}</span>
+        </div>
+        {{/controls.4}}
     </div>
     <div class="mod-footswitch" mod-role="bypass"></div>
     <div class="mod-pedal-input">
