--- a/ttlfiles-fixed/MVerb.lv2/modgui/icon-mverb.html
+++ b/ttlfiles-fixed/MVerb.lv2/modgui/icon-mverb.html
@@ -13,7 +13,6 @@
             <span class="mod-chicken-head-title">{{name}}</span>
         </div>
         {{/controls.0}}
-        <div class="mod-separator"></div>
         {{#controls.1}}
         <div class="mod-chicken-head">
             <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
@@ -51,13 +50,13 @@
             <span class="mod-chicken-head-title">{{name}}</span>
         </div>
         {{/controls.6}}
+        <div class="mod-separator"></div>
         {{#controls.7}}
         <div class="mod-chicken-head">
             <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
             <span class="mod-chicken-head-title">{{name}}</span>
         </div>
         {{/controls.7}}
-        <div class="mod-separator"></div>
         {{#controls.8}}
         <div class="mod-chicken-head">
             <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
@@ -76,6 +75,11 @@
             <div class="mod-pedal-input-image"></div>
         </div>
         {{/effect.ports.midi.input}}
+        {{#effect.ports.cv.input}}
+        <div class="mod-input mod-input-disconnected" title="{{name}}" mod-role="input-cv-port" mod-port-symbol="{{symbol}}">
+            <div class="mod-pedal-input-image"></div>
+        </div>
+        {{/effect.ports.cv.input}}
     </div>
     <div class="mod-pedal-output">
         {{#effect.ports.audio.output}}
@@ -88,5 +92,10 @@
             <div class="mod-pedal-output-image"></div>
         </div>
         {{/effect.ports.midi.output}}
+        {{#effect.ports.cv.output}}
+        <div class="mod-output mod-output-disconnected" title="{{name}}" mod-role="output-cv-port" mod-port-symbol="{{symbol}}">
+            <div class="mod-pedal-output-image"></div>
+        </div>
+        {{/effect.ports.cv.output}}
     </div>
 </div>
