Final PPP modgui

--- a/ttlfiles-fixed/PingPongPan.lv2/modgui/icon-ppp.html
+++ b/ttlfiles-fixed/PingPongPan.lv2/modgui/icon-ppp.html
@@ -1,6 +1,8 @@
 <div class="pingpongpan mod-pedal mod-pedal-boxy{{{cns}}}">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
 
+    <div mod-role="bypass-light"></div>
+
     <div class="mod-control-group clearfix">
         <div class="mod-knob pingpongpan-knob_freq">
             <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="freq"></div>
