--- a/plugins-fixed/gx_vfm.lv2/modgui/icon-gxvintagefuzzmaster.html
+++ b/plugins-fixed/gx_vfm.lv2/modgui/icon-gxvintagefuzzmaster.html
@@ -1,10 +1,11 @@
-<div class="mod-pedal mod-head-model-001{{{cns}}} mod-head-model-001-0550{{{cns}}}">
+<div class="mod-pedal mod-pedal-boxy{{{cns}}} mod-two-knobs mod-{{color}} {{color}}">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-plugin-brand"><h1>{{brand}}</h1></div>
     <div class="mod-plugin-name"><h1>{{label}}</h1></div>
-    <div class="mod-control-group clearfix">
+    <div class="mod-light on" mod-role="bypass-light"></div>
+    <div class="mod-control-group mod-enumerated-group bottom clearfix">
         {{#controls.0}}
-        <div class="mod-enumerated clearfix" mod-role="input-control-port" mod-port-symbol="{{symbol}}" mod-widget="custom-select">
+        <div class="mod-enumerated" mod-role="input-control-port" mod-port-symbol="{{symbol}}" mod-widget="custom-select">
           <div mod-role="input-control-value" mod-port-symbol="{{symbol}}" class="mod-enumerated-selected"></div>
           <div class="mod-enumerated-list">
             {{#scalePoints}}
@@ -13,35 +14,22 @@
           </div>
         </div>
         {{/controls.0}}
-        <div class="mod-switch" mod-role="bypass">
-            <div class="mod-switch-image" mod-role="bypass-light"></div>
-        </div>
-        <div class="mod-separator"></div>
+    </div>
+    <div class="mod-control-group mod-{{knob}} top clearfix">
         {{#controls.1}}
-        <div class="mod-chicken-head">
-            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
-            <span class="mod-chicken-head-title">{{name}}</span>
+        <div class="mod-knob">
+            <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-knob-title">{{name}}</span>
         </div>
         {{/controls.1}}
         {{#controls.2}}
-        <div class="mod-chicken-head">
-            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
-            <span class="mod-chicken-head-title">{{name}}</span>
+        <div class="mod-knob">
+            <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-knob-title">{{name}}</span>
         </div>
         {{/controls.2}}
-        {{#controls.3}}
-        <div class="mod-chicken-head">
-            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
-            <span class="mod-chicken-head-title">{{name}}</span>
-        </div>
-        {{/controls.3}}
-        {{#controls.4}}
-        <div class="mod-chicken-head">
-            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
-            <span class="mod-chicken-head-title">{{name}}</span>
-        </div>
-        {{/controls.4}}
     </div>
+    <div class="mod-footswitch" mod-role="bypass"></div>
     <div class="mod-pedal-input">
         {{#effect.ports.audio.input}}
         <div class="mod-input mod-input-disconnected" title="{{name}}" mod-role="input-audio-port" mod-port-symbol="{{symbol}}">
