Update midifilter: keep mod changes, switch to upstream screenshots

--- a/plugins-fixed/midifilter.lv2/modgui/icon-miditranspose.html
+++ b/plugins-fixed/midifilter.lv2/modgui/icon-miditranspose.html
@@ -1,7 +1,7 @@
 <div class="mod-pedal x42-midifilter{{{cns}}} x42-midi-transpose">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="x42-brand"><h1 title="Brought to you by x42.">x42</h1></div>
-    <div class="x42-plugin-name"><h1>MIDI CC to Note</h1></div>
+    <div class="x42-plugin-name"><h1>Chromatic Transpose</h1></div>
 
     <div class="mod-light on" mod-role="bypass-light"></div>
     <div class="mod-footswitch" mod-role="bypass"></div>
