Tweak html and css for standalone calf compressor

--- a/plugins-fixed/calf.lv2/modgui-compressor/icon-calf-compressor.html
+++ b/plugins-fixed/calf.lv2/modgui-compressor/icon-calf-compressor.html
@@ -1,4 +1,4 @@
-<div class="calf calf-compressor">
+<div class="calf-compressor">
     <header class="bar-top">
         <span class="title-calf">Calf Compressor</span>
         <div class="off-or-on-calf" mod-role="bypass">
@@ -6,7 +6,7 @@
         </div>
     </header>
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
-    <div class="global-calf">
+    <div class="calf-compressor-wrapper">
         <div class="groups-bar-left">
           <div class="top"></div>
           <div class="bottom"></div>
