Update midifitler.lv2 ttls

--- a/plugins-fixed/midifilter.lv2/modgui/icon-notetocc.html
+++ b/plugins-fixed/midifilter.lv2/modgui/icon-notetocc.html
@@ -41,6 +41,7 @@
                     <div mod-role="enumeration-option" mod-port-value="0">Fixed parameter, CC-value = velocity</div>
                     <div mod-role="enumeration-option" mod-port-value="1">Fixed parameter, CC-value = key</div>
                     <div mod-role="enumeration-option" mod-port-value="2">All keys, parameter = key, CC-value = velocity</div>
+                    <div mod-role="enumeration-option" mod-port-value="3">Toggle, parameter = key, CC-value = 127 note-on or 0 note-off</div>
                 </div>
             </div>
         </div>
