--- a/plugins-fixed/gx_studiopre_st.lv2/modgui/icon-gx-studio-preamp-stereo.html
+++ b/plugins-fixed/gx_studiopre_st.lv2/modgui/icon-gx-studio-preamp-stereo.html
@@ -1,17 +1,65 @@
-<div class="mod-pedal mod-pedal-boxy{{{cns}}} mod-eight-knobs mod-boxy75 mod-{{color}} {{color}}">
+<div class="mod-pedal mod-rack-model-001{{{cns}}}">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-plugin-brand"><h1>{{brand}}</h1></div>
     <div class="mod-plugin-name"><h1>{{label}}</h1></div>
-    <div class="mod-light on" mod-role="bypass-light"></div>
-    <div class="mod-control-group mod-{{knob}} clearfix">
-        {{#controls}}
-        <div class="mod-knob">
-            <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
-            <span class="mod-knob-title">{{name}}</span>
+    <div class="mod-control-group clearfix">
+        <div class="mod-switch" mod-role="bypass">
+            <div class="mod-switch-image" mod-role="bypass-light"></div>
         </div>
-        {{/controls}}
+        <div class="mod-separator"></div>
+        {{#controls.0}}
+        <div class="mod-chicken-head" title="{{comment}}">
+            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-chicken-head-title">{{name}}</span>
+        </div>
+        {{/controls.0}}
+        {{#controls.1}}
+        <div class="mod-chicken-head" title="{{comment}}">
+            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-chicken-head-title">{{name}}</span>
+        </div>
+        {{/controls.1}}
+        {{#controls.2}}
+        <div class="mod-chicken-head" title="{{comment}}">
+            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-chicken-head-title">{{name}}</span>
+        </div>
+        {{/controls.2}}
+        <div class="mod-separator"></div>
+        {{#controls.3}}
+        <div class="mod-chicken-head" title="{{comment}}">
+            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-chicken-head-title">{{name}}</span>
+        </div>
+        {{/controls.3}}
+        <div class="mod-separator"></div>
+        {{#controls.4}}
+        <div class="mod-chicken-head" title="{{comment}}">
+            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-chicken-head-title">{{name}}</span>
+        </div>
+        {{/controls.4}}
+        {{#controls.5}}
+        <div class="mod-chicken-head" title="{{comment}}">
+            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-chicken-head-title">{{name}}</span>
+        </div>
+        {{/controls.5}}
+        {{#controls.6}}
+        <div class="mod-chicken-head" title="{{comment}}">
+            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-chicken-head-title">{{name}}</span>
+        </div>
+        {{/controls.6}}
+        <div class="mod-separator"></div>
+        {{#controls.7}}
+        <div class="mod-chicken-head" title="{{comment}}">
+            <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
+            <span class="mod-chicken-head-title">{{name}}</span>
+        </div>
+        {{/controls.7}}
+        <div class="mod-separator"></div>
     </div>
-    <div class="mod-footswitch" mod-role="bypass"></div>
     <div class="mod-pedal-input">
         {{#effect.ports.audio.input}}
         <div class="mod-input mod-input-disconnected" title="{{name}}" mod-role="input-audio-port" mod-port-symbol="{{symbol}}">
