fix GUI and move Calf saturator to stable

--- a/plugins-fixed/calf.lv2/modgui/Saturator/icon-calf-saturator.html
+++ b/plugins-fixed/calf.lv2/modgui/Saturator/icon-calf-saturator.html
@@ -15,16 +15,18 @@
 		    <div class="bottom"></div>
 		</div>
 
-        <div class="freq input-freq">
+        <!-- below part has been made hidden  -->
+        <div hidden class="freq input-freq">
             <span class="title-fild title-freq-top">Input
                 <span class="title-fild db">0dB</span>
             </span>
         </div>
-        <div class="freq output-freq">
+        <div hidden class="freq output-freq">
             <span class="title-fild title-freq-bottom">Output
                 <span class="title-fild db">0dB</span>
             </span>
         </div>
+        <!-- above part has been made hidden -->
 
         <div class="tape-tube">
             <span class="title-slider"><small>Blend</small></span><br />
