added no shadow class to stuckstacker.html

--- a/plugins-fixed/stuck.lv2/modgui/stuckstacker.html
+++ b/plugins-fixed/stuck.lv2/modgui/stuckstacker.html
@@ -1,3 +1,5 @@
+
+ <div class="mod-pedal mod-pedal{{{cns}}} mod-no-shadow"> 
   <div class="mod-pedal stuck">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-knob" id="stuckgain" title="hold gain">
@@ -39,3 +41,4 @@
       {{/effect.ports.audio.output}}
     </div>
   </div>
+</div>
