Fixup zyn modgui combobox; add osc_port monitoring
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins/ZynAddSubFX.lv2/modgui/icon-zynaddsubfx.html
+++ b/plugins/ZynAddSubFX.lv2/modgui/icon-zynaddsubfx.html
@@ -11,6 +11,9 @@
             <option mod-role="preset-label" value="{{uri}}">{{label}}</option>
             {{/effect.presets}}
         </select>
+        <p>
+            OSC Port: <span mod-role="osc_port">---</span>
+        </p>
     </div>
     <div class="mod-pedal-input">
         {{#effect.ports.audio.input}}
