Update mixer to include level meter screens

--- a/plugins/mod-mixer.lv2/modgui/icon-mod-mixer.html
+++ b/plugins/mod-mixer.lv2/modgui/icon-mod-mixer.html
@@ -28,7 +28,7 @@
         </div>
         <div class="mod-slider" mod-role="icon-button" mod-button-type="slider">
             <span class="mod-slider-title">M</span>
-            <div class="mod-slider-image-wrapper">
+            <div class="mod-slider-image-wrapper grey">
                 <div class="mod-slider-image" mod-role="input-control-port" mod-port-symbol="MasterVolume"></div>
             </div>
         </div>
@@ -71,7 +71,6 @@
         </div>
         <div class="mod-knob button" mod-role="switch" mod-button-type="knob">
             <div class="mod-button-image" mod-widget="switch" mod-role="input-control-port" mod-port-symbol="Solo4"></div>
-            <span class="mod-slider-title">S</span>
         </div>
     </div>
     <div class="mod-control-group mod-control-group-4 clearfix">
@@ -88,10 +87,45 @@
             <div class="mod-button-image" mod-widget="switch" mod-role="input-control-port" mod-port-symbol="Mute4"></div>
         </div>
     </div>
-    <div class="mod-footswitch" mod-role="bypass"></div>
-    <div class="mod-mixer-brand">
-        <span class="mod-light on" mod-role="bypass-light"></span>
-        <span class="mod-plugin-author">{{author}}</span>
+    <div class="mod-control-group mod-control-group-5 clearfix">
+        <div class="mod-display-group" mod-role="dpm1">
+            <div title="Output Digital Peak, rise-time: immediate, falloff: 15dB/sec">
+                <span class="db" mod-role="level1">0.0</span>
+            </div>
+        </div>
+        <div class="mod-display-group" mod-role="dpm2">
+            <div title="Output Digital Peak, rise-time: immediate, falloff: 15dB/sec">
+                <span class="db" mod-role="level2">0.0</span>
+            </div>
+        </div>
+        <div class="mod-display-group" mod-role="dpm3">
+            <div title="Output Digital Peak, rise-time: immediate, falloff: 15dB/sec">
+                <span class="db" mod-role="level3">0.0</span>
+            </div>
+        </div>
+        <div class="mod-display-group" mod-role="dpm4">
+            <div title="Output Digital Peak, rise-time: immediate, falloff: 15dB/sec">
+                <span class="db" mod-role="level4">0.0</span>
+            </div>
+        </div>
+        <div class="mod-display-group" mod-role="dpm5">
+            <div title="Output Digital Peak, rise-time: immediate, falloff: 15dB/sec">
+                <span class="db" mod-role="masterLevel">0.0</span>
+            </div>
+        </div>
+    </div>
+    <div class="mod-control-group mod-control-group-6 clearfix">
+        <div class="mod-slider" mod-role="icon-button" mod-button-type="slider">
+            <span class="mod-slider-title alternative">A</span>
+            <div class="mod-slider-image-wrapper grey">
+                <div class="mod-slider-image" mod-role="input-control-port" mod-port-symbol="AltVolume"></div>
+            </div>
+        </div>
+        <div class="mod-display-group" mod-role="dpm6">
+            <div title="Output Digital Peak, rise-time: immediate, falloff: 15dB/sec">
+                <span class="db" mod-role="altLevel">0.0</span>
+            </div>
+        </div>
     </div>
     <div class="mod-pedal-input">
         {{#effect.ports.audio.input}}
