Updated modguis for mixer plugins

--- a/plugins/mod-mixer-stereo.lv2/modgui/icon-mod-mixer.html
+++ b/plugins/mod-mixer-stereo.lv2/modgui/icon-mod-mixer.html
@@ -87,6 +87,20 @@
             <div class="mod-button-image" mod-widget="switch" mod-role="input-control-port" mod-port-symbol="Mute4"></div>
         </div>
     </div>
+    <div class="mod-control-group mod-control-group-7 clearfix">
+        <div class="mod-knob button" mod-role="switch" mod-button-type="knob">
+            <div class="mod-button-image" mod-widget="switch" mod-role="input-control-port" mod-port-symbol="Alt1"></div>
+        </div>
+        <div class="mod-knob button" mod-role="switch" mod-button-type="knob">
+            <div class="mod-button-image" mod-widget="switch" mod-role="input-control-port" mod-port-symbol="Alt2"></div>
+        </div>
+        <div class="mod-knob button" mod-role="switch" mod-button-type="knob">
+            <div class="mod-button-image" mod-widget="switch" mod-role="input-control-port" mod-port-symbol="Alt3"></div>
+        </div>
+        <div class="mod-knob button" mod-role="switch" mod-button-type="knob">
+            <div class="mod-button-image" mod-widget="switch" mod-role="input-control-port" mod-port-symbol="Alt4"></div>
+        </div>
+    </div>
     <div class="mod-control-group mod-control-group-5 clearfix">
         <div class="mod-display-group" mod-role="dpm1">
             <div title="Output Digital Peak, rise-time: immediate, falloff: 15dB/sec">
