Continue audiofile modgui
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins-fixed/carla-files.lv2/modgui/icon-audio.html
+++ b/plugins-fixed/carla-files.lv2/modgui/icon-audio.html
@@ -20,19 +20,25 @@
     </div>
     <div class="falktx-audio-file-content-bottom">
         <div class="falktx-audio-file-info">
-            <span class="file-info-title">Info</span>
             <div class="file-info-svg"></div>
-            <div class="file-info-details"></div>
-            <div class="file-info-cursor"></div>
+            <div class="file-info-details">&nbsp;</div>
         </div>
         <div class="falktx-audio-file-controls">
-            <div class="mod-switch mod-control-group">
-                <span class="mod-switch-title">LOOP MODE</span>
-                <div class="mod-switch-image mod-port" mod-role="input-control-port" mod-port-symbol="loop_mode" mod-widget="film"></div>
+            <div class="mod-knob">
+                <span class="title">VOLUME</span>
+                <div class="mod-control-group mod-knob-image mod-port" mod-role="input-control-port" mod-port-symbol="volume" mod-widget="film"></div>
             </div>
-            <div class="mod-switch mod-control-group">
-                <span class="mod-switch-title">ON/OFF</span>
-                <div class="mod-switch-image mod-port" mod-role="bypass" mod-widget="film"></div>
+            <div class="mod-switch">
+                <span class="title">HOST SYNC</span>
+                <div class="mod-control-group mod-switch-image mod-port" mod-role="input-control-port" mod-port-symbol="host_sync" mod-widget="film"></div>
+            </div>
+            <div class="mod-switch">
+                <span class="title">LOOP MODE</span>
+                <div class="mod-control-group mod-switch-image mod-port" mod-role="input-control-port" mod-port-symbol="loop_mode" mod-widget="film"></div>
+            </div>
+            <div class="mod-switch">
+                <span class="title">ON/OFF</span>
+                <div class="mod-control-group mod-switch-image mod-port transport" mod-role="bypass" mod-widget="film"></div>
             </div>
         </div>
     </div>
