--- a/plugins-fixed/artyfx.lv2/modgui/icon-kuiza.html
+++ b/plugins-fixed/artyfx.lv2/modgui/icon-kuiza.html
@@ -1,9 +1,9 @@
-<div class="mod-pedal mod-pedal-japanese{{{cns}}} mod-four-knobs mod-{{color}} {{color}}">
+<div class="mod-pedal mod-pedal-artyfx">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-plugin-brand"><h1>{{brand}}</h1></div>
     <div class="mod-plugin-name"><h1>{{label}}</h1></div>
     <div class="mod-light on" mod-role="bypass-light"></div>
-    <div class="mod-control-group mod-{{knob}} clearfix">
+    <div class="mod-control-group artyfx-kuiza clearfix">
         {{#controls}}
         <div class="mod-knob" title="{{comment}}">
             <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
