Update zconvo modgui
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins-fixed/zeroconvo.lv2/modgui/icon.html
+++ b/plugins-fixed/zeroconvo.lv2/modgui/icon.html
@@ -24,10 +24,12 @@
             <div class="mod-knob">
                 <span class="title">DRY</span>
                 <div class="mod-control-group mod-knob-image mod-port" mod-role="input-control-port" mod-port-symbol="dry" mod-widget="film"></div>
+                <span class="mod-knob-current-value" mod-role="input-control-value" mod-port-symbol="dry"></span>
             </div>
             <div class="mod-knob">
                 <span class="title">WET</span>
                 <div class="mod-control-group mod-knob-image mod-port" mod-role="input-control-port" mod-port-symbol="wet" mod-widget="film"></div>
+                <span class="mod-knob-current-value" mod-role="input-control-value" mod-port-symbol="wet"></span>
             </div>
             <div class="mod-switch">
                 <span class="title">BUFFERED</span>
