Implement enum-list param widget for dragonfly modguis
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins-fixed/DragonflyEarlyReflections.lv2/modgui/icon.html
+++ b/plugins-fixed/DragonflyEarlyReflections.lv2/modgui/icon.html
@@ -1,6 +1,20 @@
 <div class="mod-pedal mod-pedal-dragonfly-early">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-footswitch" mod-role="bypass"></div>
+    <div class="mod-control-group mod-enumerated-group clearfix">
+        <div class="mod-enumerated" mod-role="input-control-port" mod-port-symbol="program" mod-widget="custom-select">
+            <div class="mod-enumerated-list">
+                <div mod-role="enumeration-option" mod-port-value="0">Abrupt Echo</div>
+                <div mod-role="enumeration-option" mod-port-value="1">Backstage Pass</div>
+                <div mod-role="enumeration-option" mod-port-value="2">Concert Venue</div>
+                <div mod-role="enumeration-option" mod-port-value="3">Damaged Goods</div>
+                <div mod-role="enumeration-option" mod-port-value="4">Elevator Pitch</div>
+                <div mod-role="enumeration-option" mod-port-value="5">Floor Thirteen</div>
+                <div mod-role="enumeration-option" mod-port-value="6">Garage Band</div>
+                <div mod-role="enumeration-option" mod-port-value="7">Home Studio</div>
+            </div>
+        </div>
+    </div>
     <div class="mod-control-group dragonfly-early-group-levels clearfix">
         <div class="mod-knob">
             <div class="mod-knob-image large" mod-role="input-control-port" mod-widget-rotation="270" mod-port-symbol="early_level"></div>
