--- a/plugins-fixed/DragonflyPlateReverb.lv2/modgui/icon.html
+++ b/plugins-fixed/DragonflyPlateReverb.lv2/modgui/icon.html
@@ -1,6 +1,15 @@
 <div class="mod-pedal mod-pedal-dragonfly-plate">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-footswitch" mod-role="bypass"></div>
+    <div class="mod-control-group mod-enumerated-group clearfix">
+        <div class="mod-enumerated" mod-role="input-control-port" mod-port-symbol="algorithm" mod-widget="custom-select">
+            <div class="mod-enumerated-list">
+                <div mod-role="enumeration-option" mod-port-value="0">Simple</div>
+                <div mod-role="enumeration-option" mod-port-value="1">Nested</div>
+                <div mod-role="enumeration-option" mod-port-value="2">Tank</div>
+            </div>
+        </div>
+    </div>
     <div class="mod-control-group dragonfly-plate-group-top clearfix">
         <div class="mod-knob">
             <div class="mod-knob-image large" mod-role="input-control-port" mod-widget-rotation="270" mod-port-symbol="predelay"></div>
