--- a/plugins-fixed/MOD-ConvolutionLoader.lv2/modgui/icon.html
+++ b/plugins-fixed/MOD-ConvolutionLoader.lv2/modgui/icon.html
@@ -19,6 +19,11 @@
     <div class="mod-convolution-reverb-info">
         <div class="file-info-details">&nbsp;</div>
     </div>
+    <div class="mod-knob mod-convolution-reverb-hpf">
+        <span class="title">FILTER</span>
+        <div class="mod-control-group mod-knob-image mod-port" mod-role="input-control-port" mod-port-symbol="hpf" mod-widget="film"></div>
+        <span class="mod-knob-current-value" mod-role="input-control-value" mod-port-symbol="hpf"></span>
+    </div>
     <div class="mod-knob mod-convolution-reverb-drylevel">
         <span class="title">DRY</span>
         <div class="mod-control-group mod-knob-image mod-port" mod-role="input-control-port" mod-port-symbol="drylevel" mod-widget="film"></div>
