Rename for mod-convolution-loader css class
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins-fixed/MOD-ConvolutionLoader.lv2/modgui/icon.html
+++ b/plugins-fixed/MOD-ConvolutionLoader.lv2/modgui/icon.html
@@ -1,6 +1,6 @@
-<div class="mod-convolution-reverb mod-pedal">
+<div class="mod-convolution-loader mod-pedal">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
-    <div class="mod-convolution-reverb-branding">
+    <div class="mod-convolution-loader-branding">
         <span>{{label}}</span>
     </div>
     <div class="mod-control-group mod-enumerated-group clearfix">
@@ -16,20 +16,20 @@
         {{/path}}
         {{/effect.parameters}}
     </div>
-    <div class="mod-convolution-reverb-info">
+    <div class="mod-convolution-loader-info">
         <div class="file-info-details">&nbsp;</div>
     </div>
-    <div class="mod-knob mod-convolution-reverb-hpf">
+    <div class="mod-knob mod-convolution-loader-hpf">
         <span class="title">FILTER</span>
         <div class="mod-control-group mod-knob-image mod-port" mod-role="input-control-port" mod-port-symbol="hpf" mod-widget="film"></div>
         <span class="mod-knob-current-value" mod-role="input-control-value" mod-port-symbol="hpf"></span>
     </div>
-    <div class="mod-knob mod-convolution-reverb-drylevel">
+    <div class="mod-knob mod-convolution-loader-drylevel">
         <span class="title">DRY</span>
         <div class="mod-control-group mod-knob-image mod-port" mod-role="input-control-port" mod-port-symbol="drylevel" mod-widget="film"></div>
         <span class="mod-knob-current-value" mod-role="input-control-value" mod-port-symbol="drylevel"></span>
     </div>
-    <div class="mod-knob mod-convolution-reverb-wetlevel">
+    <div class="mod-knob mod-convolution-loader-wetlevel">
         <span class="title">WET</span>
         <div class="mod-control-group mod-knob-image mod-port" mod-role="input-control-port" mod-port-symbol="wetlevel" mod-widget="film"></div>
         <span class="mod-knob-current-value" mod-role="input-control-value" mod-port-symbol="wetlevel"></span>
