NAM: Tweak model list css, add default model
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins-fixed/neural_amp_modeler.lv2/modgui/icon-nam.html
+++ b/plugins-fixed/neural_amp_modeler.lv2/modgui/icon-nam.html
@@ -16,7 +16,7 @@
             {{#path}}
             <div class="mod-enumerated" mod-role="input-parameter" mod-parameter-uri="{{uri}}" mod-widget="custom-select-path">
                 <div mod-role="input-parameter-value" mod-parameter-uri="{{uri}}" class="mod-enumerated-selected">
-                    -- choose --
+                    (please select a model)
                 </div>
                 <div class="mod-enumerated-list">
                     {{#files}}
