cabsim modgui tweaks
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins-fixed/MOD-CabinetLoader.lv2/modgui/icon.html
+++ b/plugins-fixed/MOD-CabinetLoader.lv2/modgui/icon.html
@@ -3,6 +3,9 @@
     <div class="mod-cabinet-loader-background"></div>
     <div class="mod-cabinet-loader-shadow1"></div>
     <div class="mod-cabinet-loader-shadow2"></div>
+    <div class="mod-cabinet-loader-branding">
+        <span>{{label}}</span>
+    </div>
     <div class="mod-control-group mod-enumerated-group clearfix">
         {{#effect.parameters}}
         {{#path}}
